classDiagram
    Operation <|-- Withdraw
    Operation <|-- Deposit
    Operation <|-- Transfer
    Transfer <|-- TransferOperations
    DataManager <|-- TransactionHistory
    TransactionHistory <|-- TransactionFilter


Operation : - currentBalance
Operation : + supportersInstance 
Operation: +displayText()
Operation: +calculateNewBalance()
Operation: +returnBalanceAfterTransaction()
class Withdraw{
    -double balanceAfterTransaction
    +displayText()
    +calculateNewBalance()
    +returnBalanceAfterTransaction()
    +printNewBalance()
}

class Deposit{
    -double balanceAfterTransaction
    +displayText()
    +calculateNewBalance()
    +returnBalanceAfterTransaction()
    +printNewBalance()
}

class Transfer{
    -double balanceAfterTransaction
    -String sortCode
    -String accountNumber
    +displayText() 
    +calculateNewBalance()
    +returnBalanceAfterTransaction()
    +printNewBalance()
    +performTransfer()
}

class TransferOperations {
    -String transfereeEmail
    +getTransferee()
    +doesTransfereeExist()
    +getWithdrawalAmount()
    +addToTransactionHistory()
}

class Delete {
    -String emailOfAccountToDelete
    -int lineOfUserToDeleteRecord
    -int lineOfUserInBalancesFile
    -ArrayList linesToWrite
    -Array<Deque> filesToReadUser
    -Array<Deque> filesToWriteBackInto
    +setUserToDeleteIndex()
    +readFiles()
    +writeDataBackIntoFiles() 
    +transferBalancesToMainBank()
}

class DataManager {
    +createObject()
    +readFile()
    +updateHistory()
}

class TransactionHistory {
    -HashMap~String, LinkedList~String~~ transactionHistory
    -String userEmail
    -boolean doesUserHaveTransactionHistory
    -int lineCounter
    -String lineToWrite
    +loadHashMapContents()
    +buildLinkedList()
    +getIfUserHasTransactionHistory()
    +createObject()
    +readFile()
    +updateHistory()
    +displayTransactionHistory()
}  

class TransactionFilter {
    -Map<String, LinkedList<String>> transactionHistory;
    -double lowerBound;
    -double upperBound;
    -double rangeUserWantsToFilter;
    -double userLowerBoundInput;
    -double userUpperBoundInput;
    +setBounds(): void
    +findDifferenceBetweenValues(): double 
    +getBoundsFromUser(): void
    +displayTransactionResults(): void
    +isTransactionWithinBounds(): boolean
}



